--- a/check_data.ipynb
+++ b/check_data.ipynb
@@ -77,6 +77,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "91bd29c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 59,  43,  50, ..., 140,  84,  72], shape=(3072,), dtype=uint8)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_dict[b'data'][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1353b64f",
+   "metadata": {},
+   "source": [
+    "CIFAR-10 contient des images 32×32 pixels en couleur.\n",
+    "\n",
+    "Chaque image a 3 canaux (RGB).\n",
+    "\n",
+    "Donc : 32 × 32 × 3 = 3072.\n",
+    "\n",
+    "**Output** : vecteur de longueur 3072."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "126e22aa",
    "metadata": {},
@@ -110,6 +145,14 @@
     "print(\"Data shape:\", data_all.shape)\n",
     "print(\"Labels shape:\", labels_all.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ea6eb58",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
