Visual upgrades of code

--- a/notebook/experiment_activation_distribution.ipynb
+++ b/notebook/experiment_activation_distribution.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a5fd12e5",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,6 @@
     "            x = out[0] if isinstance(out, (tuple, list)) else out\n",
     "            x = x.detach().float().reshape(-1)\n",
     "\n",
-    "            # random subsampling to limit memory usage\n",
     "            if x.numel() > self.max_samples:\n",
     "                idx = torch.randint(0, x.numel(), (self.max_samples,), device=x.device)\n",
     "                x = x[idx]\n",
@@ -97,7 +96,7 @@
     "        \"\"\"\n",
     "        Forward sur x_fixed et stocke les activations.\n",
     "        \"\"\"\n",
-    "        self.model.train()  # Custom BN depends on the batch -> snapshot in train() mode\n",
+    "        self.model.train()\n",
     "        self.clear_tmp()\n",
     "        _ = self.model(x_fixed)\n",
     "\n",
@@ -110,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "30bcac6f",
    "metadata": {},
    "outputs": [],
@@ -130,14 +129,12 @@
     "):\n",
     "    assert len(steps) == len(values_by_step) and len(steps) > 0\n",
     "\n",
-    "    # downsample if there are too many curves to keep the plot readable\n",
     "    n = len(steps)\n",
     "    if n > max_curves:\n",
     "        idx = np.linspace(0, n - 1, max_curves).astype(int)\n",
     "        steps = [steps[i] for i in idx]\n",
     "        values_by_step = [values_by_step[i] for i in idx]\n",
     "\n",
-    "    # robust x-range\n",
     "    all_vals = np.concatenate([v[np.isfinite(v)] for v in values_by_step], axis=0)\n",
     "    if xlim is None:\n",
     "        lo, hi = np.quantile(all_vals, [0.001, 0.999])\n",
@@ -273,7 +270,7 @@
     "    if model_type == \"conv\":\n",
     "        return ConvMLP(in_channels=3, input_size=32, use_bn=use_bn)\n",
     "    elif model_type == \"mlp\":\n",
-    "        # CIFAR10: input_dim = 3*32*32 = 3072\n",
+    "        # CIFAR10\n",
     "        return MLP(input_dim=3072, use_bn=use_bn)\n",
     "    else:\n",
     "        raise ValueError(\"model_type must be 'conv' or 'mlp'\")\n",
@@ -297,13 +294,12 @@
     "\n",
     "    train_loader, test_loader = get_dataloaders(batch_size=batch_size, root=r\"C:\\Users\\ryans\\Desktop\\projet_programation\\Advanced_ML_BN_2025\\data\\cifar-10-batches-py\")\n",
     "\n",
-    "    # batch fixe\n",
     "    xb_fixed, _ = next(iter(train_loader))\n",
     "    xb_fixed = xb_fixed.to(device)\n",
     "\n",
     "    prefix = get_prefix(model_type)\n",
     "\n",
-    "    # ---- NO BN\n",
+    "    # NO BN\n",
     "    model_no = build_model(model_type, use_bn=False).to(device)\n",
     "    opt_no = torch.optim.SGD(model_no.parameters(), lr=lr)\n",
     "\n",
@@ -319,7 +315,7 @@
     "    )\n",
     "    logger_no.remove()\n",
     "\n",
-    "    # ---- WITH BN\n",
+    "    # WITH BN\n",
     "    model_bn = build_model(model_type, use_bn=True).to(device)\n",
     "    opt_bn = torch.optim.SGD(model_bn.parameters(), lr=lr)\n",
     "\n",
@@ -335,22 +331,18 @@
     "    )\n",
     "    logger_bn.remove()\n",
     "\n",
-    "    # layers to trace\n",
     "    layer_pre = f\"{prefix}0\"\n",
     "\n",
     "    if model_type == \"conv\":\n",
-    "        # ConvMLP with BN: [Linear, BN, ReLU, ...]\n",
     "        layer_post_bn = f\"{prefix}1\"\n",
     "    else:\n",
-    "        # MLP without BN: [Linear, BN, ReLU, ...] aussi\n",
     "        layer_post_bn = f\"{prefix}1\"\n",
     "\n",
-    "    # sanity\n",
     "    print(\"NO BN snapshots:\", len(logger_no.snapshots.get(layer_pre, [])))\n",
     "    print(\"BN snapshots pre:\", len(logger_bn.snapshots.get(layer_pre, [])))\n",
     "    print(\"BN snapshots post-BN:\", len(logger_bn.snapshots.get(layer_post_bn, [])))\n",
     "\n",
-    "    # --- plots\n",
+    "    # plots\n",
     "    xlim = ridgeline_distribution(\n",
     "        logger_no.steps,\n",
     "        logger_no.snapshots[layer_pre],\n",
@@ -387,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "cbe7b536",
    "metadata": {},
    "outputs": [
@@ -568,7 +560,7 @@
    ],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    # ---- ConvMLP\n",
+    "    # ConvMLP\n",
     "    run_experiment(\n",
     "        model_type=\"conv\",\n",
     "        epochs=3,\n",
@@ -578,7 +570,7 @@
     "        out_dir=r\"C:\\Users\\ryans\\Desktop\\projet_programation\\Advanced_ML_BN_2025\\image\\plots\"\n",
     "    )\n",
     "\n",
-    "    # ---- MLP\n",
+    "    # MLP\n",
     "    run_experiment(\n",
     "        model_type=\"mlp\",\n",
     "        epochs=3,\n",
