--- a/notebook/experiment_cifar_by_steps.ipynb
+++ b/notebook/experiment_cifar_by_steps.ipynb
@@ -218,7 +218,7 @@
    "id": "4a08d5ea",
    "metadata": {},
    "source": [
-    "##  ⚠️⚠️LR = 0.6 & 15 epochs ⚠️⚠️\n"
+    "## LR = 0.6 & 15 epochs\n"
    ]
   },
   {
