--- a/notebook/experiment_cifar_cnn_by_steps.ipynb
+++ b/notebook/experiment_cifar_cnn_by_steps.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e8065999",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
     }
    ],
    "source": [
-    "# Calculer le nombre de steps par epoch pour placer les test_acc\n",
+    "# We calculate number of steps\n",
     "steps = range(1, len(results[\"NoBN\"][\"train_acc\"]) + 1)\n",
     "steps_per_epoch = len(results[\"NoBN\"][\"train_acc\"]) // EPOCHS\n",
     "test_steps = [(i + 1) * steps_per_epoch for i in range(EPOCHS)]\n",
@@ -232,7 +232,7 @@
    "id": "4a08d5ea",
    "metadata": {},
    "source": [
-    "##  ⚠️⚠️LR = 0.6 & 15 epochs ⚠️⚠️\n"
+    "## LR = 0.6 & 15 epochs\n"
    ]
   },
   {
@@ -350,7 +350,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.12.3)",
+   "display_name": ".conda",
    "language": "python",
    "name": "python3"
   },
@@ -364,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.25"
   }
  },
  "nbformat": 4,
