--- a/notebook/experiment_fashion_by_steps.ipynb
+++ b/notebook/experiment_fashion_by_steps.ipynb
@@ -249,7 +249,7 @@
    "id": "4a08d5ea",
    "metadata": {},
    "source": [
-    "##  ⚠️⚠️LR = 0.6 & 15 epochs ⚠️⚠️\n"
+    "## LR = 0.6 & 15 epochs\n"
    ]
   },
   {
@@ -500,7 +500,7 @@
    "id": "6f435f5e",
    "metadata": {},
    "source": [
-    "##  ⚠️⚠️LR = 0.6 & 15 epochs ⚠️⚠️"
+    "## LR = 0.6 & 15 epochs"
    ]
   },
   {
