--- a/notebook/experiment_activation_distribution.ipynb
+++ b/notebook/experiment_activation_distribution.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a5fd12e5",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
     "\n",
     "        self.handles = []\n",
     "        self.tmp = {}\n",
-    "        self.snapshots = {}   # {name: [np.array, ...]}\n",
+    "        self.snapshots = {}  \n",
     "        self.steps = []\n",
     "\n",
     "    def _hook(self, name):\n",
