--- a/notebook/experiment_fashion_cnn_by_steps.ipynb
+++ b/notebook/experiment_fashion_cnn_by_steps.ipynb
@@ -256,7 +256,7 @@
    "id": "4a08d5ea",
    "metadata": {},
    "source": [
-    "##  ⚠️⚠️LR = 0.6 & 15 epochs ⚠️⚠️\n"
+    "##  LR = 0.6 & 15 epochs "
    ]
   },
   {
@@ -378,7 +378,7 @@
    "id": "73014dbf",
    "metadata": {},
    "source": [
-    "##  ⚠️⚠️LR = 0.7 & 15 epochs ⚠️⚠️"
+    "## LR = 0.7 & 15 epochs "
    ]
   },
   {
@@ -500,27 +500,15 @@
    "id": "6f435f5e",
    "metadata": {},
    "source": [
-    "##  ⚠️⚠️LR = 0.6 & 15 epochs ⚠️⚠️"
+    "##  LR = 0.6 & 15 epochs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3628e3a5",
+   "id": "7098449a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'MLP' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m use_bn \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;28;01mTrue\u001b[39;00m]:\n\u001b[0;32m      6\u001b[0m     name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBN\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m use_bn \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNoBN\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 8\u001b[0m     model \u001b[38;5;241m=\u001b[39m \u001b[43mMLP\u001b[49m(input_dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m28\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m28\u001b[39m, hidden_dims\u001b[38;5;241m=\u001b[39m( \u001b[38;5;241m256\u001b[39m, \u001b[38;5;241m128\u001b[39m), use_bn\u001b[38;5;241m=\u001b[39muse_bn)\u001b[38;5;241m.\u001b[39mto(DEVICE)\n\u001b[0;32m      9\u001b[0m     optimizer \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39moptim\u001b[38;5;241m.\u001b[39mSGD(model\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39mLR)\n\u001b[0;32m     11\u001b[0m     results[name] \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m     12\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mloss\u001b[39m\u001b[38;5;124m\"\u001b[39m: [],\n\u001b[0;32m     13\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgrad_norm\u001b[39m\u001b[38;5;124m\"\u001b[39m: [],\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain_acc\u001b[39m\u001b[38;5;124m\"\u001b[39m: [],\n\u001b[0;32m     15\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest_acc\u001b[39m\u001b[38;5;124m\"\u001b[39m: []\n\u001b[0;32m     16\u001b[0m     }\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'MLP' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "EPOCHS = 15\n",
     "LR = 0.6\n",
