--- a/notebook/experiment_cifar.ipynb
+++ b/notebook/experiment_cifar.ipynb
@@ -250,7 +250,7 @@
    "id": "4a08d5ea",
    "metadata": {},
    "source": [
-    "##  ⚠️⚠️LR = 0.6 & 15 epochs ⚠️⚠️\n"
+    "## LR = 0.6 & 15 epochs\n"
    ]
   },
   {
