--- a/notebook/experiment_fashion_cnn.ipynb
+++ b/notebook/experiment_fashion_cnn.ipynb
@@ -282,7 +282,7 @@
    "id": "4a08d5ea",
    "metadata": {},
    "source": [
-    "##  ⚠️⚠️LR = 0.6 & 15 epochs ⚠️⚠️\n"
+    "## LR = 0.6 & 15 epochs\n"
    ]
   },
   {
