Revision of different files

--- a/check_data.ipynb
+++ b/check_data.ipynb
@@ -102,13 +102,13 @@
    "id": "1353b64f",
    "metadata": {},
    "source": [
-    "CIFAR-10 contient des images 32×32 pixels en couleur.\n",
+    "CIFAR-10 : pictures 32×32 pixels in color.\n",
     "\n",
-    "Chaque image a 3 canaux (RGB).\n",
+    "each picture has 3 channels (RGB).\n",
     "\n",
     "Donc : 32 × 32 × 3 = 3072.\n",
     "\n",
-    "**Output** : vecteur de longueur 3072."
+    "**Output** : vector of size 3072."
    ]
   },
   {
@@ -116,8 +116,8 @@
    "id": "126e22aa",
    "metadata": {},
    "source": [
-    "## Lecture simple des 5 batches CIFAR-10\n",
-    "Charge uniquement les 5 lots d'entraînement et affiche les shapes des données et labels."
+    "## Simple lecture of 5 batches CIFAR-10\n",
+    "Charges only 5 training pack and display shapes of datas and labels."
    ]
   },
   {
@@ -147,19 +147,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ea6eb58",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "39f5d663",
    "metadata": {},
    "source": [
-    "## Lecture du  test"
+    "## Test Lecture"
    ]
   },
   {
@@ -186,14 +178,6 @@
     "print(\"Test data shape:\", test_data.shape)\n",
     "print(\"Test labels shape:\", test_labels.shape)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79eca2c3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
